syntax = "proto2";

package oaa.proto.messages;

// APK class: xnb — Navigation distance/ETA update (msgId 0x8007 on Nav channel)
// Sent periodically by phone during active navigation
message NavigationDistance {
    optional NavigationDistanceInfo info = 1;
    optional string eta_text = 2;
    optional int32 eta_seconds = 3;
    optional bytes distance_display = 8;
}

message NavigationDistanceInfo {
    optional NavigationDistanceValue distance = 1;
}

message NavigationDistanceValue {
    // Distance as string (e.g. "0", "1.2")
    optional string value = 2;
    // Unit enum (6 observed — possibly miles, feet, km, m, etc.)
    optional int32 unit = 3;
}
