/*
 * NavigationTurnEvent — turn-by-turn navigation detail.
 *
 * APK class: vzm.java (AA v16.1)
 * Channel: Navigation (channel 10)
 * Message ID: 0x8004 (32772) — sent by phone
 * Dispatched by hkx.java line 1033: hzyVar.k(32772, o.q())
 *
 * Contains turn icon, maneuver type, turn side, and distance.
 * Complements NavigationStep (0x8003) with richer turn detail.
 */

syntax = "proto3";

import "ManeuverTypeEnum.proto";
import "TurnSideEnum.proto";

package oaa.proto.messages;

message NavigationTurnEvent {
    optional string road_name = 1;                   // APK: b — descriptor says string (not bytes)
    optional int32 maneuver_type = 2;                // APK: c — descriptor says enum (int32 wire)
    optional int32 turn_direction = 3;               // APK: d (int, default=1) — validated by vyv.h/vee.Q()
    optional bytes turn_icon = 4;                    // APK: e — descriptor says bytes
    optional int32 distance_meters = 5;              // APK: f (int) — distance to turn
    optional int32 distance_unit = 6;                // APK: g (int) — distance display unit
}
